src/objects/Auto_Communication_Rule__c.object
<CustomObject>
    <description>Proof of Concept - to replace existing MAC rules that:

Describes consumer-facing communications that can be generated automatically, either as an email or a fulfillment order. These include Medical Questionnaire reminders, Product Return reminders, and Fraud Case notifications.</description>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Digital_Attempt_1st_Template__c</fullName>
        <description>Use the Template Unique Name from the Email Communication Template.</description>
        <inlineHelpText>Use the Template Unique Name from the Email Communication Template.</inlineHelpText>
        <label>Digital Attempt 1st Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Attempt_2nd_Template__c</fullName>
        <description>Use the Template Unique Name from the Email Communication Template.</description>
        <inlineHelpText>Use the Template Unique Name from the Email Communication Template.</inlineHelpText>
        <label>Digital Attempt 2nd Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Attempt_3rd_Template__c</fullName>
        <description>Use the Template Unique Name from the Email Communication Template.</description>
        <inlineHelpText>Use the Template Unique Name from the Email Communication Template.</inlineHelpText>
        <label>Digital Attempt 3rd Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Instructions__c</fullName>
        <description>Article Number - must be in correct format. This will be used to render the instructions on the upload form.</description>
        <inlineHelpText>Article Number - must be in correct format. This will be used to render the instructions on the upload form.</inlineHelpText>
        <label>Digital Instructions</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Thankyou_Email__c</fullName>
        <description>Use the Template Unique Name from the Email Communication Template.</description>
        <inlineHelpText>Use the Template Unique Name from the Email Communication Template.</inlineHelpText>
        <label>Digital Thankyou Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Comment_Path__c</fullName>
        <description>Chris - this may be a duplicate/unnecessary now.</description>
        <formula>Global_Comment_Code__r.Full_Comment_Path__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Comment Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCR_CID__c</fullName>
        <formula>Global_Comment_Code__r.GCR_CID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCR_CID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Search_Key__c</fullName>
        <description>Key generated from Coutry:Language:Type populated via WFR</description>
        <externalId>true</externalId>
        <inlineHelpText>Key generated from Coutry:Language:Type populated via WFR</inlineHelpText>
        <label>General Search Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_PDF_for_Attempt__c</fullName>
        <inlineHelpText>Currently in development - will allow PDF to be generated for specific attempt number</inlineHelpText>
        <label>Generate PDF for Attempt</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Comment_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used as MAC rules reviewed all used global comment code</description>
        <inlineHelpText>Lookup to Global Comment Code</inlineHelpText>
        <label>Global Comment Code</label>
        <referenceTo>Global_Comment_Code__c</referenceTo>
        <relationshipName>Auto_Communcation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Comment_Path__c</fullName>
        <description>External Id set via WFR</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id set via WFR</inlineHelpText>
        <label>Global Comment Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Product_Path__c</fullName>
        <description>Global Product Path</description>
        <inlineHelpText>Global Product Path, enter either segment or path</inlineHelpText>
        <label>Global Product Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Search_Key__c</fullName>
        <description>Populated via WFR - uniqueness enforced. Using 1st fulfillment item country/language values.
Specific to product type matching.</description>
        <inlineHelpText>Populated via WFR - uniqueness enforced. Using 1st fulfillment item country/language values.
Specific to product type matching.</inlineHelpText>
        <label>Product Search Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Supported_Return_Type__c</fullName>
        <label>Supported Return Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ACR_Return_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_Unique_Name__c</fullName>
        <description>Use the Template Unique Name from the Email Communication Template.</description>
        <inlineHelpText>Use the Template Unique Name from the Email Communication Template.</inlineHelpText>
        <label>Template Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fraud Notice</fullName>
                </value>
                <value>
                    <fullName>Medical Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Product Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Return__c</fullName>
        <description>Identifies the type of request the return is</description>
        <inlineHelpText>Identifies the type of request the return is</inlineHelpText>
        <label>Type of Return</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adhoc</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Non-Permanent Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Attempt_Fulfillment_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>1st Attempt Fulfillment Item</label>
        <referenceTo>Fulfillment_Item__c</referenceTo>
        <relationshipName>Auto_Communcation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2nd_Attempt_Fulfillment_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>2nd Attempt Fulfillment Item</inlineHelpText>
        <label>2nd Attempt Fulfillment Item</label>
        <referenceTo>Fulfillment_Item__c</referenceTo>
        <relationshipName>Auto_Communcation_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3rd_Attempt_Fulfillment_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>3rd Attempt Fulfillment Item</inlineHelpText>
        <label>3rd Attempt Fulfillment Item</label>
        <referenceTo>Fulfillment_Item__c</referenceTo>
        <relationshipName>Auto_Communcation_Rules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Auto Communication Rule</label>
    <listViews>
        <fullName>ADHOC_NA_Adult_Incont_Adhesive_10_17</fullName>
        <columns>NAME</columns>
        <columns>Product_Search_Key__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>equals</operation>
            <value>10440</value>
        </filters>
        <filters>
            <field>Global_Product_Path__c</field>
            <operation>contains</operation>
            <value>Adult Incontinence</value>
        </filters>
        <label>ADHOC NA Adult Incont Adhesive-10/17</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADHOC_US_Charmin_Lint_or_Scratch_10_2017</fullName>
        <columns>GCR_CID__c</columns>
        <columns>NAME</columns>
        <columns>Product_Search_Key__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>equals</operation>
            <value>10187,10408</value>
        </filters>
        <filters>
            <field>Global_Product_Path__c</field>
            <operation>contains</operation>
            <value>Charmin</value>
        </filters>
        <label>ADHOC US Charmin Lint or Scratch 10/2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADHOC_US_Shampoo_performance_issues_8_17</fullName>
        <columns>NAME</columns>
        <columns>Product_Search_Key__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>contains</operation>
            <value>10366,10367,10422</value>
        </filters>
        <filters>
            <field>Global_Product_Path__c</field>
            <operation>contains</operation>
            <value>Pantene/Shampoo/</value>
        </filters>
        <filters>
            <field>Global_Product_Path__c</field>
            <operation>contains</operation>
            <value>/Classic Clean/</value>
        </filters>
        <label>ADHOC US Shampoo-performance issues-8/17</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Adhoc_Baby_Wipes_Multiple_PQCs</fullName>
        <columns>NAME</columns>
        <columns>Product_Search_Key__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>equals</operation>
            <value>10026,10031,10063,10142,10156</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Return</value>
        </filters>
        <filters>
            <field>Product_Search_Key__c</field>
            <operation>contains</operation>
            <value>United Kingdom,Spain,Portugal,Turkey,South Africa</value>
        </filters>
        <label>Adhoc EIMEA Baby Wipes Multiple PQCs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Adhoc_Diapers_Seams_Larissa_1_6_2017</fullName>
        <columns>NAME</columns>
        <columns>Product_Search_Key__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>equals</operation>
            <value>10100,10099</value>
        </filters>
        <filters>
            <field>Product_Search_Key__c</field>
            <operation>startsWith</operation>
            <value>south africa,poland</value>
        </filters>
        <filters>
            <field>Global_Product_Path__c</field>
            <operation>startsWith</operation>
            <value>pampers</value>
        </filters>
        <label>Adhoc Diapers Seams RSA Poland 1/6/2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Adhoc_Diapers_Seams_UK_3_14_2017</fullName>
        <columns>NAME</columns>
        <columns>Product_Search_Key__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>equals</operation>
            <value>10099,10100</value>
        </filters>
        <filters>
            <field>Product_Search_Key__c</field>
            <operation>contains</operation>
            <value>United Kingdom</value>
        </filters>
        <filters>
            <field>Global_Product_Path__c</field>
            <operation>startsWith</operation>
            <value>Pampers</value>
        </filters>
        <label>Adhoc Diapers Seams UK 3/14/2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Adhoc_Diapers_Tapes_Larissa_10_26_2016</fullName>
        <columns>NAME</columns>
        <columns>Product_Search_Key__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>equals</operation>
            <value>10116,10115,10111</value>
        </filters>
        <filters>
            <field>Product_Search_Key__c</field>
            <operation>startsWith</operation>
            <value>Egypt</value>
        </filters>
        <label>Adhoc Diapers Tapes Larissa  10/26/2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Adhoc_Diapers_Tapes_Leg_Cuffs_RSA</fullName>
        <columns>NAME</columns>
        <columns>Product_Search_Key__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>equals</operation>
            <value>10021,10112,10115</value>
        </filters>
        <filters>
            <field>Product_Search_Key__c</field>
            <operation>contains</operation>
            <value>South Africa</value>
        </filters>
        <filters>
            <field>Global_Product_Path__c</field>
            <operation>startsWith</operation>
            <value>Pampers</value>
        </filters>
        <label>Adhoc Diapers Tapes Leg Cuffs RSA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Adhoc_Diapers_WaistbandLarissa_2_1_2017</fullName>
        <columns>NAME</columns>
        <columns>Product_Search_Key__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>contains</operation>
            <value>10135</value>
        </filters>
        <filters>
            <field>Product_Search_Key__c</field>
            <operation>contains</operation>
            <value>united kingdom</value>
        </filters>
        <label>Adhoc Diapers WaistbandLarissa  2/1/2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Adhoc_Germany_Dentif_Dent_Care_Leaks</fullName>
        <columns>NAME</columns>
        <columns>Product_Search_Key__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>equals</operation>
            <value>10031,10127,10128,10519</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Return</value>
        </filters>
        <filters>
            <field>Product_Search_Key__c</field>
            <operation>contains</operation>
            <value>Germany</value>
        </filters>
        <label>Adhoc Germany Dentif. &amp; Dent. Care Leaks</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Adhoc_India_Pampers</fullName>
        <columns>NAME</columns>
        <columns>Product_Search_Key__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>GCR_CID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>vanessa voisard</value>
        </filters>
        <filters>
            <field>Product_Search_Key__c</field>
            <operation>contains</operation>
            <value>India</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>7/12/2017 12:00 AM</value>
        </filters>
        <label>Adhoc India Pampers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Adhoc_Italy_Dentifrice_Dent_Care_Leaks</fullName>
        <columns>NAME</columns>
        <columns>Product_Search_Key__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>equals</operation>
            <value>10031,10127,10128,10519</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Return</value>
        </filters>
        <filters>
            <field>Product_Search_Key__c</field>
            <operation>contains</operation>
            <value>Italy</value>
        </filters>
        <label>Adhoc Italy Dentifrice &amp; Dent Care Leaks</label>
        <language>it</language>
    </listViews>
    <listViews>
        <fullName>Adhoc_Kenya_Pampers</fullName>
        <columns>NAME</columns>
        <columns>Product_Search_Key__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>GCR_CID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>vanessa voisard</value>
        </filters>
        <filters>
            <field>Product_Search_Key__c</field>
            <operation>contains</operation>
            <value>Kenya</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>8/3/2017 12:00 AM</value>
        </filters>
        <label>Adhoc Kenya Pampers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Adhoc_Lindor_Larissa_Morozov_10_20_2016</fullName>
        <columns>NAME</columns>
        <columns>Product_Search_Key__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>equals</operation>
            <value>10019,10052</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Return</value>
        </filters>
        <filters>
            <field>Global_Product_Path__c</field>
            <operation>contains</operation>
            <value>Lindor/Heavy Adult Incontinence</value>
        </filters>
        <label>Adhoc Lindor Larissa Morozov 10/20/2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Adhoc_NA_AP_DO_Thin_Watery_11_14_17</fullName>
        <columns>GCR_CID__c</columns>
        <columns>NAME</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Global_Comment_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product_Search_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>equals</operation>
            <value>10186</value>
        </filters>
        <filters>
            <field>Global_Product_Path__c</field>
            <operation>contains</operation>
            <value>AP-DO &amp; Body Spray</value>
        </filters>
        <label>Adhoc NA AP-DO Thin, Watery 11/14/17</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ACR-{00000}</displayFormat>
        <label>Auto Communication Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto Communication Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Article_Number_Format</fullName>
        <active>true</active>
        <description>prevents incorrect article number format being entered</description>
        <errorConditionFormula>/*example: REGEX(SSN__c, &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;)*/
NOT(
REGEX(Digital_Instructions__c , &quot;[0-9]{9}|^$&quot;)
)</errorConditionFormula>
        <errorMessage>The article number format you have entered is incorrect. Please check the article number and try again. An article number should look like &quot;000046513&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Article_Number_Required</fullName>
        <active>true</active>
        <description>If return type = Digital an Article Number must be provided</description>
        <errorConditionFormula>ISPICKVAL(Supported_Return_Type__c,&quot;Digital&quot;)
&amp;&amp;
ISBLANK(Digital_Instructions__c)</errorConditionFormula>
        <errorMessage>If return type = Digital an Article Number must be provided</errorMessage>
    </validationRules>
</CustomObject>